[package]
name = "bn"
version = "0.4.3"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/zcash/bn"
repository = "https://github.com/zcash/bn"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "~0.3.14"
byteorder = "~0.5.3"
hex = "0.4.3"
